--- a/index_cr.html
+++ b/index_cr.html
@@ -97,44 +97,44 @@
             <div class="sec"> 
                 <h2>Shop gifts for recipient</h2>
                 <div class="sec-content sec-content-blocks">
-                    <div class="sec-img-boxes" ><img src="card1_1.jpg" height="110px" width="110px" alt="Gifts for him"> <p>For him</p></div>
-                    <div class="sec-img-boxes" ><img src="card1_2.jpg" height="110px" width="110px" alt="Gifts for her"> <p> For her</p></div>
-                    <div class="sec-img-boxes" ><img src="card1_3.jpg" height="110px" width="110px" alt="Gifts for kids"> <p> For kids</p></div>
-                    <div class="sec-img-boxes" ><img src="card1_4.jpg" height="110px" width="110px" alt="Gifts for teens"> <p> For teens</p></div>
+                    <div class="sec-img-boxes" ><img src="img/card1_1.jpg" height="110px" width="110px" alt="Gifts for him"> <p>For him</p></div>
+                    <div class="sec-img-boxes" ><img src="img/card1_2.jpg" height="110px" width="110px" alt="Gifts for her"> <p> For her</p></div>
+                    <div class="sec-img-boxes" ><img src="img/card1_3.jpg" height="110px" width="110px" alt="Gifts for kids"> <p> For kids</p></div>
+                    <div class="sec-img-boxes" ><img src="img/card1_4.jpg" height="110px" width="110px" alt="Gifts for teens"> <p> For teens</p></div>
                 </div>
                 <p ><a href="#" class="shop-section-text">Shop all gifts</a></p>
             </div>
             <div class="sec"> 
                 <h2>Gaming Accessories</h2>
                 <div class="sec-content sec-content-blocks">
-                    <div class="sec-img-boxes" ><img src="card2_1.jpg" height="110px" width="110px" > <p>Headsets</p></div>
-                    <div class="sec-img-boxes" ><img src="card2_3.jpg" height="110px" width="110px" ><p> Keyboards</p></div>
-                    <div class="sec-img-boxes" ><img src="card2_2.jpg" height="110px" width="110px" > <p> Computer mice</p></div>
-                    <div class="sec-img-boxes" ><img src="card2_4.jpg" height="110px" width="110px" > <p> Chairs</p></div>
+                    <div class="sec-img-boxes" ><img src="img/card2_1.jpg" height="110px" width="110px" > <p>Headsets</p></div>
+                    <div class="sec-img-boxes" ><img src="img/card2_3.jpg" height="110px" width="110px" ><p> Keyboards</p></div>
+                    <div class="sec-img-boxes" ><img src="img/card2_2.jpg" height="110px" width="110px" > <p> Computer mice</p></div>
+                    <div class="sec-img-boxes" ><img src="img/card2_4.jpg" height="110px" width="110px" > <p> Chairs</p></div>
                 </div>
                 <p ><a href="#" class="shop-section-text">See more</a></p>
             </div>
             <div class="sec">
                 <h2>Small Gifts under $20 </h2>
                 <div class="sec-content">
-                    <div class="sec-img" style="background-image: url('card3.jpg');"></div>
+                    <div class="sec-img" style="background-image: url('img/card3.jpg');"></div>
                 </div>
                 <p ><a href="#" class="shop-section-text">Shop now</a></p>
             </div>
             <div class="sec">
                 <h2>Delightful Deals for everyone </h2>
                 <div class="sec-content">
-                    <div class="sec-img" style="background-image: url('card4.jpg');"></div>
+                    <div class="sec-img" style="background-image: url('img/card4.jpg');"></div>
                 </div>
                 <p ><a href="#" class="shop-section-text">Shop now</a></p>
             </div>
             <div class="sec"> 
                 <h2>Home Essentials</h2>
                 <div class="sec-content sec-content-blocks">
-                    <div class="sec-img-boxes" ><img src="card5_1.jpg" height="110px" width="110px" alt="Gifts for him"> <p>Cleaning tools</p></div>
-                    <div class="sec-img-boxes" ><img src="card5_2.jpg" height="110px" width="110px" alt="Gifts for her"> <p>Home Storage</p></div>
-                    <div class="sec-img-boxes" ><img src="card5_3.jpg" height="110px" width="110px" alt="Gifts for kids"> <p> Home Decor</p></div>
-                    <div class="sec-img-boxes" ><img src="card5_4.jpg" height="110px" width="110px" alt="Gifts for teens"> <p> Bedding</p></div>
+                    <div class="sec-img-boxes" ><img src="img/card5_1.jpg" height="110px" width="110px" alt="Gifts for him"> <p>Cleaning tools</p></div>
+                    <div class="sec-img-boxes" ><img src="img/card5_2.jpg" height="110px" width="110px" alt="Gifts for her"> <p>Home Storage</p></div>
+                    <div class="sec-img-boxes" ><img src="img/card5_3.jpg" height="110px" width="110px" alt="Gifts for kids"> <p> Home Decor</p></div>
+                    <div class="sec-img-boxes" ><img src="img/card5_4.jpg" height="110px" width="110px" alt="Gifts for teens"> <p> Bedding</p></div>
                     
                 </div>
                 <p ><a href="#" class="shop-section-text">See more</a></p>
@@ -142,24 +142,24 @@
             <div class="sec"> 
                 <h2>Fashion</h2>
                 <div class="sec-content sec-content-blocks">
-                    <div class="sec-img-boxes" ><img src="card8_1.jpg" height="110px" width="110px" alt="Gifts for him"> <p>Jeans</p></div>
-                    <div class="sec-img-boxes" ><img src="card8_2.jpg" height="110px" width="110px" alt="Gifts for her"> <p>Tops</p></div>
-                    <div class="sec-img-boxes" ><img src="card8_3.jpg" height="110px" width="110px" alt="Gifts for kids"> <p>Dresses</p></div>
-                    <div class="sec-img-boxes" ><img src="card8_4.jpg" height="110px" width="110px" alt="Gifts for teens"> <p>Shoes</p></div>
+                    <div class="sec-img-boxes" ><img src="img/card8_1.jpg" height="110px" width="110px" alt="Gifts for him"> <p>Jeans</p></div>
+                    <div class="sec-img-boxes" ><img src="img/card8_2.jpg" height="110px" width="110px" alt="Gifts for her"> <p>Tops</p></div>
+                    <div class="sec-img-boxes" ><img src="img/card8_3.jpg" height="110px" width="110px" alt="Gifts for kids"> <p>Dresses</p></div>
+                    <div class="sec-img-boxes" ><img src="img/card8_4.jpg" height="110px" width="110px" alt="Gifts for teens"> <p>Shoes</p></div>
                 </div>
                 <p ><a href="#" class="shop-section-text">See all deals</a></p>
             </div>
             <div class="sec">
                 <h2>Deals in PCs</h2>
                 <div class="sec-content">
-                    <div class="sec-img" style="background-image: url('card6.jpg');"></div>
+                    <div class="sec-img" style="background-image: url('img/card6.jpg');"></div>
                 </div>
                 <p ><a href="#" class="shop-section-text">Shop now</a></p>
             </div>
             <div class="sec">
                 <h2>Kitchen Appliances</h2>
                 <div class="sec-content">
-                    <div class="sec-img" style="background-image: url('card7.jpg');"></div>
+                    <div class="sec-img" style="background-image: url('img/card7.jpg');"></div>
                 </div>
                 <p ><a href="#" class="shop-section-text">Shop now</a></p>
             </div>
@@ -168,26 +168,26 @@
                 <h2 class="holiday-sec-text">Holiday specials</h2>
                 <p class="holiday-sec-explore"> &nbsp;&nbsp;<a href="#">Explore now</a></p>
                 <div class="holiday-sec-gifts">
-                    <div class="gift" style="background-image: url('hol_1.jpg');"></div>
-                    <div class="gift" style="background-image: url('hol2.jpg');"></div>
-                    <div class="gift" style="background-image: url('hol3.jpg');"></div>
-                    <div class="gift" style="background-image: url('hol4.jpg');"></div>
-                    <div class="gift" style="background-image: url('hol5.jpg');"></div>
-                    <div class="gift" style="background-image: url('hol6.jpg');"></div>
+                    <div class="gift" style="background-image: url('img/hol_1.jpg');"></div>
+                    <div class="gift" style="background-image: url('img/hol2.jpg');"></div>
+                    <div class="gift" style="background-image: url('img/hol3.jpg');"></div>
+                    <div class="gift" style="background-image: url('img/hol4.jpg');"></div>
+                    <div class="gift" style="background-image: url('img/hol5.jpg');"></div>
+                    <div class="gift" style="background-image: url('img/hol6.jpg');"></div>
                 </div>
             </div>
             <div class="holiday-sec">
                 <h2 class="holiday-sec-text">Related to items you've viewed</h2>
                 <p class="holiday-sec-explore"> &nbsp;&nbsp;<a href="#">See more</a></p>
                 <div class="holiday-sec-gifts">
-                    <div class="book" style="background-image: url('book1.jpg');"></div>
-                    <div class="book" style="background-image: url('book2.jpg');"></div>
-                    <div class="book" style="background-image: url('book3.jpg');"></div>
-                    <div class="book" style="background-image: url('book4.jpg');"></div>
-                    <div class="book" style="background-image: url('book5.jpg');"></div>
-                    <div class="book" style="background-image: url('book6.jpg');"></div>
-                    <div class="book" style="background-image: url('book7.jpg');"></div>
-                    <div class="book" style="background-image: url('book8.jpg');"></div>
+                    <div class="book" style="background-image: url('img/book1.jpg');"></div>
+                    <div class="book" style="background-image: url('img/book2.jpg');"></div>
+                    <div class="book" style="background-image: url('img/book3.jpg');"></div>
+                    <div class="book" style="background-image: url('img/book4.jpg');"></div>
+                    <div class="book" style="background-image: url('img/book5.jpg');"></div>
+                    <div class="book" style="background-image: url('img/book6.jpg');"></div>
+                    <div class="book" style="background-image: url('img/book7.jpg');"></div>
+                    <div class="book" style="background-image: url('img/book8.jpg');"></div>
                 </div>
             </div>
         </div>
