--- a/index.html
+++ b/index.html
@@ -97,56 +97,56 @@
         <div class="sec"> 
             <div class="sec-content">
                 <h2>Clothes</h2>
-                <div class="sec-img" style="background-image: url('box1_image.jpg');"></div>
+                <div class="sec-img" style="background-image: url('img/box1_image.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="sec">
             <div class="sec-content">
                 <h2>Health & Personal Care</h2>
-                <div class="sec-img" style="background-image: url('box2_image.jpg');"></div>
+                <div class="sec-img" style="background-image: url('img/box2_image.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="sec">
             <div class="sec-content">
                 <h2>Furniture & Storage</h2>
-                <div class="sec-img" style="background-image: url('box3_image.jpg');"></div>
+                <div class="sec-img" style="background-image: url('img/box3_image.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="sec">
             <div class="sec-content">
                 <h2>Electronics</h2>
-                <div class="sec-img" style="background-image: url('box4_image.jpg');"></div>
+                <div class="sec-img" style="background-image: url('img/box4_image.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="sec"> 
             <div class="sec-content">
                 <h2>Beauty picks</h2>
-                <div class="sec-img" style="background-image: url('box5_image.jpg');"></div>
+                <div class="sec-img" style="background-image: url('img/box5_image.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="sec">
             <div class="sec-content">
                 <h2>Pet Care</h2>
-                <div class="sec-img" style="background-image: url('box6_image.jpg');"></div>
+                <div class="sec-img" style="background-image: url('img/box6_image.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="sec">
             <div class="sec-content">
                 <h2>New Arrivals & Toys</h2>
-                <div class="sec-img" style="background-image: url('box7_image.jpg');"></div>
+                <div class="sec-img" style="background-image: url('img/box7_image.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="sec">
             <div class="sec-content">
                 <h2>Discover Fashion Trends</h2>
-                <div class="sec-img" style="background-image: url('box8_image.jpg');"></div>
+                <div class="sec-img" style="background-image: url('img/box8_image.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
